# M-todos-Num-ricos-II

./: AblacioCardiaca.cpp  CMakeLists.txt  Clase.cpp  FixedPointMethod.cpp  GraficosAblacion.py  claseplotting.py  derivative - copia.cpp  derivative.cpp  graphics.py
